...
}

export const DEFAULT_LABELS: PickerLabels = {
	countryLabel: 'Country',
	stateLabel: 'State / Province',
	cityLabel: 'City',
	countryTitle: 'Select Country',
	stateTitle: 'Select State / Province',
	cityTitle: 'Select City',
	countryPlaceholder: 'Select country',
	statePlaceholder: 'Select state',
	cityPlaceholder: 'Select city',
	stateDisabledPlaceholder: 'Select a country first',
	cityDisabledPlaceholder: 'Select a state first',
	stateNotApplicable: 'Not applicable',
	cityNotApplicable: 'Not applicable',
...
